--- a/Docs/Meza-FidalgoOzogPepper_ENV872_Project_Draft.Rmd
+++ b/Docs/Meza-FidalgoOzogPepper_ENV872_Project_Draft.Rmd
@@ -67,11 +67,20 @@ theme_set(mytheme)
 ```{r data loading, echo = FALSE}
 Strandings <- read.csv("../Data/Raw/OBIS_seamap_strandings_mystic.csv", stringsAsFactors = TRUE)
 
-Stranding_Final <- read.csv("../Data/Processed/strandings_final.csv", stringsAsFactors = TRUE)
+Strandings_Final <- read.csv("../Data/Processed/strandings_final.csv", stringsAsFactors = TRUE)
 
+Strandings_Final <- Strandings_Final %>%
+  select(Family:longitude)
+  
 Annual_Strandings_Totals <- read.csv("../Data/Processed/annual_strandings_totals.csv", stringsAsFactors = TRUE)
 
+Annual_Strandings_Totals <- Annual_Strandings_Totals %>%
+  select(Year:Odontocetes_Total)
+
 Monthly_Strandings_Totals <- read.csv("../Data/Processed/monthly_strandings_totals.csv", stringsAsFactors = TRUE)
+
+Monthly_Strandings_Totals <- Monthly_Strandings_Totals %>%
+  select(Month:Odontocetes_Total)
 ```
 
 
@@ -86,21 +95,10 @@ Our objective is to analyze animal strandings over the years to see if there any
 \newpage
 
 # Dataset Information
-<<<<<<< HEAD
-=======
 
 The dataset that we chose to work on is the Mystic Aquarium's marine mammal and sea turtle stranding data from 1976 to 2011. It contains the number of whale (odontocetes and mysticetes), dolphin, and sea turtle strandings that occurred along the coasts of Connecticut, Rhode Island and Fishers Island, New York, USA. The latitude ranged from 41.00 to 41.86 while the longitude was from -73.65 to -71.10. Within the dataset, there are a total of 1,141 strandings, of which 885 were marine mammals and 256 were sea turtles. We data was provided using the datum WGS: 1984 and we performed a data transformation into UTM 19 (32619).
 
 
--output table --> take from data_wrangling file
-
-* Describes source and content of data
->>>>>>> 85633980f470914ec3b4a36de03e1bc06c593051
-* Details the wrangling process from raw to processed data
-* Contains a table summarizing the dataset structure
-
-
-<<<<<<< HEAD
 Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011
 
 * Contains whales, dolphins, and sea turtles
@@ -117,24 +115,16 @@ Mystic Aquarium's marine mammal and sea turtle stranding data 1976-2011
 
 
 ```{r - Table summary of the dataset structure, message = FALSE, warning = FALSE}
-#take eval=FALSE out after adding in the data 
 colnames(Strandings)
-head(Strandings)
 
 colnames(Strandings_Final)
 head(Strandings_Final)
 
-colnames(strandings_totals)
-head(strandings_totals)
-=======
+head(Annual_Strandings_Totals)
 
-NOTE: take eval=FALSE out after adding in the data 
-```{r - Table summary of the dataset structure, echo=FALSE, message=FALSE, warning=FALSE, eval=FALSE }
-colnames(strandings_final)
-head(strandings_final)
->>>>>>> 85633980f470914ec3b4a36de03e1bc06c593051
-
+head(Monthly_Strandings_Totals)
 ```
+
 
 
 
