--- a/Code/pinniped_stranding_analysis.Rmd
+++ b/Code/pinniped_stranding_analysis.Rmd
@@ -29,6 +29,7 @@ library(trend)
 library(zoo)
 library(Kendall)
 library(tseries)
+library(knitr)
 
 getwd()
 
@@ -170,6 +171,61 @@ mapview(Pinniped_sf_utm,
 
 Knowing where the "mean" stranding location is could allow for a study of that area in order to determine why pinniped strandings are so prominent on this area and allow for the allocation of more recovery resources and personnel to that area to compensate for the higher levels of strandings. 
 
+
+
+
+```{r Distance Table}
+# points within 40,000m
+Pinniped_40 <- Pinniped_sf_utm %>%
+  filter(mean_distance < 40000) %>%
+  mutate(distance_group = "< 40,000")
+
+# points between 40,000m - 60,000m
+Pinniped_40_60 <- Pinniped_sf_utm %>%
+  filter(mean_distance >= 40000 & mean_distance < 60000) %>%
+  mutate(distance_group = "40,000 - 60,000")
+
+# points between 60,000m - 80,000m
+Pinniped_60_80 <- Pinniped_sf_utm %>%
+  filter(mean_distance >= 60000 & mean_distance < 80000) %>%
+  mutate(distance_group = "60,000 - 80,000")
+
+# points between 80,000m - 100,000m
+Pinniped_80_100 <- Pinniped_sf_utm %>%
+  filter(mean_distance >= 80000 & mean_distance < 100000) %>%
+  mutate(distance_group = "80,000 - 100,000")
+
+# points between 100,000m - 120,000m
+Pinniped_100_120 <- Pinniped_sf_utm %>%
+  filter(mean_distance >= 100000 & mean_distance < 120000) %>%
+  mutate(distance_group = "100,000 - 120,000")
+
+# points between 120,000m - 140,000m
+Pinniped_120_140 <- Pinniped_sf_utm %>%
+  filter(mean_distance >= 120000 & mean_distance < 140000) %>%
+  mutate(distance_group = "120,000 - 140,000")
+
+# points between 140,000m - 160,000m
+Pinniped_140_160 <- Pinniped_sf_utm %>%
+  filter(mean_distance >= 140000 & mean_distance < 160000) %>%
+  mutate(distance_group = "140,000 - 160,000")
+
+# points greater than 160,000m
+Pinniped_160 <- Pinniped_sf_utm %>%
+  filter(mean_distance >= 160000) %>%
+  mutate(distance_group = "> 160,000")
+
+# row bind the distance dataframes
+Pinniped_sf_utm_final <- rbind(Pinniped_40, Pinniped_40_60, Pinniped_60_80, Pinniped_80_100, Pinniped_100_120, Pinniped_120_140, Pinniped_140_160, Pinniped_160)
+
+Pinniped_distances <- Pinniped_sf_utm_final %>%
+  group_by(distance_group) %>%
+  summarise(totals_by_distance = n()) %>%
+  st_drop_geometry() %>%
+  arrange(totals_by_distance)
+
+kable(Pinniped_distances)
+```
 
 
 >>Temporal Analysis
